Firebase - Products Collection

--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "@types/node": "^16.11.36",
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.4",
+    "dotenv": "^16.0.1",
+    "dotenv-webpack": "^7.1.0",
+    "firebase": "^9.8.4",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-router-dom": "^6.3.0",
